// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthLink renders Sign in link when authStatus is configuring 1`] = `
<DocumentFragment>
  <div
    class="auth-link"
    data-testid="auth-link"
  >
    <a
      class="auth-link__link"
      href="/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="sign-in-link"
    >
      Sign in
    </a>
  </div>
</DocumentFragment>
`;

exports[`AuthLink renders Sign in link when authStatus is unauthenticated 1`] = `
<DocumentFragment>
  <div
    class="auth-link"
    data-testid="auth-link"
  >
    <a
      class="auth-link__link"
      href="/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="sign-in-link"
    >
      Sign in
    </a>
  </div>
</DocumentFragment>
`;

exports[`AuthLink renders Sign out link when authStatus is authenticated 1`] = `
<DocumentFragment>
  <div
    class="auth-link"
    data-testid="auth-link"
  >
    <a
      class="auth-link__link"
      href="/auth/signout"
      id="sign-out-link"
    >
      Sign out
    </a>
  </div>
</DocumentFragment>
`;
